examples/errors/identification/missing_function_declaration.xana
def p(a :: int) :: void do
end

def main() do
    non_existent()
end